# structure

./: .gitignore  CONTRIBUTING  Dockerfile  README.md  cli.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
structure/models/: __init__.py  generate_models.py  get_classes.py  models.py
structure/parsing/: aggregation.py  file_handlers.py  parse.py
structure/parsing/utils/: json_fixer.py
structure/server/: server.py
tests/: run_models.sh
