[tool.poetry]
name = "structure-llm"
version = "0.1.0"
description = "Data structuring with LLM"
authors = ["Matthieu <matthieu@structure.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "structure", from = "." }]


[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.147"
pandas = "^2.0.0"
openai = "^0.27.4"
uvicorn = "^0.21.1"
datamodel-code-generator = "^0.18.0"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
